Upgrade version to 1.1.3 (#419)
1. Suport starrocks datasource;
2. Fix for packaging;
3. Enable to fetch remote log;
4. Add heartbeat feature to datax engine plugin;
5. Fix the problem in rpc job log service;
6. Add auto column handlers.