@@ -1,14 +1,13 @@
 package com.webank.wedatasphere.exchangis.datasource.Utils;
 
 import org.apache.linkis.common.conf.CommonVars;
-import sun.misc.BASE64Decoder;
-import sun.misc.BASE64Encoder;
 
 import javax.crypto.Cipher;
 import java.io.IOException;
 import java.security.*;
 import java.security.spec.PKCS8EncodedKeySpec;
 import java.security.spec.X509EncodedKeySpec;
+import java.util.Base64;
 
 /**
  * @author tikazhang
@@ -78,13 +77,13 @@ public class RSAUtil {
 
     //字节数组转Base64编码
     public static String byte2Base64(byte[] bytes){
-        BASE64Encoder encoder = new BASE64Encoder();
-        return encoder.encode(bytes);
+        Base64.Encoder encoder = Base64.getEncoder();
+        return encoder.encodeToString(bytes);
     }
 
     //Base64编码转字节数组
     public static byte[] base642Byte(String base64Key) throws IOException {
-        BASE64Decoder decoder = new BASE64Decoder();
-        return decoder.decodeBuffer(base64Key);
+        Base64.Decoder decoder = Base64.getDecoder();
+        return decoder.decode(base64Key);
     }
 }
